--- a/DL_HW_1.ipynb
+++ b/DL_HW_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMBwhMFRHwZEIt/NFchYt3E",
+      "authorship_tag": "ABX9TyOklNGPk9yDlPLwp3E/2DZC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       },
       "outputs": [],
       "source": [
-        "# --- Cell 1: Setup ---\n",
+        "\n",
         "!pip -q install torch torchvision torcheval"
       ]
     },
@@ -203,17 +203,17 @@
         "            ConvBlock(32, 32),\n",
         "        )\n",
         "        self.block2 = nn.Sequential(\n",
-        "            nn.MaxPool2d(2),              # 14x14\n",
+        "            nn.MaxPool2d(2),\n",
         "            ConvBlock(32, 64),\n",
         "            ConvBlock(64, 64),\n",
         "        )\n",
         "        self.block3 = nn.Sequential(\n",
-        "            nn.MaxPool2d(2),              # 7x7\n",
+        "            nn.MaxPool2d(2),\n",
         "            ConvBlock(64, 128),\n",
         "            ConvBlock(128, 128),\n",
         "        )\n",
         "        self.head = nn.Sequential(\n",
-        "            nn.AdaptiveAvgPool2d(1),      # 1x1\n",
+        "            nn.AdaptiveAvgPool2d(1),\n",
         "            nn.Flatten(),\n",
         "            nn.Linear(128, num_classes)\n",
         "        )\n",
@@ -488,7 +488,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load best weights\n",
         "if best[\"state\"] is not None:\n",
         "    model.load_state_dict(best[\"state\"])\n",
         "\n",
@@ -561,7 +560,7 @@
         "    all_targets = []\n",
         "    for x, y in loader:\n",
         "        x = x.to(device, non_blocking=True)\n",
-        "        logits = model(x)               # raw (pre-softmax) logits\n",
+        "        logits = model(x)\n",
         "        all_logits.append(logits.cpu())\n",
         "        all_targets.append(y.clone())\n",
         "    return torch.cat(all_logits, dim=0), torch.cat(all_targets, dim=0)"
@@ -576,7 +575,7 @@
       "cell_type": "code",
       "source": [
         "train_plain_ds = datasets.MNIST(root=\"./data\", train=True, download=True,\n",
-        "                                transform=test_tf)  # no augments for consistent logits\n",
+        "                                transform=test_tf)\n",
         "train_plain_loader = DataLoader(train_plain_ds, batch_size=512, shuffle=False,\n",
         "                                num_workers=NUM_WORKERS, pin_memory=True)"
       ],
@@ -747,12 +746,7 @@
       "cell_type": "code",
       "source": [
         "def kd_loss(student_logits, teacher_logits, true_labels, T=4.0, alpha=0.5):\n",
-        "    \"\"\"\n",
-        "    Combined KD + CE loss.\n",
-        "    T: temperature\n",
-        "    alpha: weighting (0→only true labels, 1→only KD)\n",
-        "    \"\"\"\n",
-        "    # Soft targets from teacher\n",
+        "\n",
         "    soft_teacher = F.log_softmax(teacher_logits / T, dim=1)\n",
         "    soft_student = F.log_softmax(student_logits / T, dim=1)\n",
         "    kd = F.kl_div(soft_student, soft_teacher.exp(), reduction=\"batchmean\") * (T**2)\n",
@@ -833,7 +827,7 @@
         "    total_loss = 0\n",
         "    for i, (x, y) in enumerate(train_loader_kd):\n",
         "        x, y = x.to(DEVICE), y.to(DEVICE)\n",
-        "        # fetch teacher logits for same batch indices\n",
+        "\n",
         "        batch_logits = teacher_logits[i*128 : i*128 + x.size(0)]\n",
         "        loss = kd_loss(student(x), batch_logits, y, T=TEMP, alpha=ALPHA)\n",
         "        opt.zero_grad()\n",
@@ -917,14 +911,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Cell 1: Reload student + data + helpers ---\n",
+        "\n",
         "import os, time, math, copy, torch, torch.nn as nn, torch.nn.functional as F\n",
         "from torch.utils.data import DataLoader\n",
         "from torchvision import datasets, transforms\n",
         "\n",
         "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "# Student arch (must match Step 2)\n",
         "class StudentMLP(nn.Module):\n",
         "    def __init__(self, hidden=256):\n",
         "        super().__init__()\n",
@@ -940,13 +933,11 @@
         "            x = x.view(x.size(0), -1)\n",
         "        return self.net(x)\n",
         "\n",
-        "# Load weights from Step 2\n",
         "student_fp32 = StudentMLP(hidden=256)\n",
         "ckpt = torch.load(\"./student_kd.pt\", map_location=\"cpu\")\n",
         "student_fp32.load_state_dict(ckpt if isinstance(ckpt, dict) and \"state_dict\" not in ckpt else ckpt[\"state_dict\"])\n",
         "student_fp32.eval();\n",
         "\n",
-        "# Data\n",
         "test_tf = transforms.Compose([\n",
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize((0.1307,), (0.3081,))\n",
@@ -959,7 +950,7 @@
         "    model.eval()\n",
         "    correct = total = 0\n",
         "    for x, y in loader:\n",
-        "        x, y = x.to(\"cpu\"), y.to(\"cpu\")  # accuracy on CPU for consistency\n",
+        "        x, y = x.to(\"cpu\"), y.to(\"cpu\")\n",
         "        logits = model(x)\n",
         "        pred = logits.argmax(1)\n",
         "        correct += (pred == y).sum().item()\n",
@@ -973,7 +964,7 @@
         "    return mb\n",
         "\n",
         "def density_percent(model):\n",
-        "    \"\"\"% of nonzero weights for float modules (pre-quant).\"\"\"\n",
+        "\n",
         "    nz, total = 0, 0\n",
         "    with torch.no_grad():\n",
         "        for p in model.parameters():\n",
@@ -1031,7 +1022,7 @@
         "    return m\n",
         "\n",
         "\n",
-        "PRUNE_PCT = 0.90  # try 0.5, 0.75, 0.90, 0.95 for your Pareto curve\n",
+        "PRUNE_PCT = 0.90\n",
         "student_pruned = apply_global_unstructured_pruning(student_fp32, PRUNE_PCT)\n",
         "\n",
         "print(\"After unstructured pruning\")\n",
@@ -1136,12 +1127,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Cell 1: Reload model for calibration ---\n",
+        "\n",
         "import torch, torch.nn as nn, torch.nn.functional as F\n",
         "from torchvision import datasets, transforms\n",
         "from torch.utils.data import DataLoader\n",
         "\n",
-        "# --- Re-instantiate same architecture ---\n",
         "class StudentMLP(nn.Module):\n",
         "    def __init__(self, hidden=256):\n",
         "        super().__init__()\n",
@@ -1157,13 +1147,11 @@
         "            x = x.view(x.size(0), -1)\n",
         "        return self.net(x)\n",
         "\n",
-        "# Load weights (pruned or quantized)\n",
         "student = StudentMLP(hidden=256)\n",
         "state_dict = torch.load(\"./compressed_ckpt/student_pruned_unstructured_90.pt\", map_location=\"cpu\")\n",
         "student.load_state_dict(state_dict, strict=False)\n",
         "student.eval();\n",
         "\n",
-        "# Data\n",
         "test_tf = transforms.Compose([\n",
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize((0.1307,), (0.3081,))\n",
@@ -1180,7 +1168,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Cell 2: Collect logits + labels & define ECE ---\n",
+        "\n",
         "import numpy as np, matplotlib.pyplot as plt\n",
         "\n",
         "@torch.no_grad()\n",
@@ -1233,7 +1221,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Cell 3: Temperature scaling ---\n",
+        "\n",
         "import torch.optim as optim\n",
         "\n",
         "def tune_temperature(logits, labels, lr=0.01, max_iter=500):\n",
@@ -1252,7 +1240,6 @@
         "T_opt = tune_temperature(logits.clone(), labels.clone())\n",
         "print(f\"Optimal temperature: {T_opt:.3f}\")\n",
         "\n",
-        "# Apply calibrated logits and compute ECE again\n",
         "logits_T = logits / T_opt\n",
         "ece_after_T = expected_calibration_error(logits_T, labels)\n",
         "print(f\"ECE after temperature scaling: {ece_after_T:.4f}\")\n"
@@ -1279,7 +1266,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Cell 4: Reliability diagrams ---\n",
+        "\n",
         "def reliability_diagram(logits, labels, T=None, n_bins=15, title=\"Reliability\"):\n",
         "    probs = torch.softmax(logits if T is None else logits/T, dim=1)\n",
         "    confs, preds = probs.max(1)\n",
@@ -1342,7 +1329,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Cell 1: Helpers for metrics & ECE ---\n",
+        "\n",
         "import os, time, torch, torch.nn as nn, numpy as np, matplotlib.pyplot as plt\n",
         "\n",
         "def model_size_mb(model, path=\"./_tmp.pt\"):\n",
@@ -1406,12 +1393,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- FIXED Cell 2: Robust model loading ---\n",
+        "\n",
         "import torch, os\n",
         "from torchvision import datasets, transforms\n",
         "from torch.utils.data import DataLoader\n",
         "\n",
-        "# architecture definitions\n",
+        "\n",
         "class StudentMLP(nn.Module):\n",
         "    def __init__(self, hidden=256):\n",
         "        super().__init__()\n",
@@ -1442,14 +1429,14 @@
         "    def forward(self,x): return self.stem(x)\n",
         "\n",
         "def safe_load(path):\n",
-        "    \"\"\"Handles both full-model and state_dict files\"\"\"\n",
+        "\n",
         "    obj = torch.load(path, map_location=\"cpu\")\n",
         "    if isinstance(obj, dict) and \"state_dict\" in obj:\n",
         "        return obj[\"state_dict\"]\n",
-        "    elif isinstance(obj, dict):  # plain state_dict\n",
+        "    elif isinstance(obj, dict):\n",
         "        return obj\n",
         "    else:\n",
-        "        # full model object (torch.save(model))\n",
+        "\n",
         "        return obj.state_dict()\n",
         "\n",
         "models = {}\n",
@@ -1458,7 +1445,7 @@
         "models[\"Pruned_90\"] = safe_load(\"./compressed_ckpt/student_pruned_unstructured_90.pt\")\n",
         "models[\"Quantized_INT8\"] = safe_load(\"/content/compressed_ckpt/student_pruned_int8.pt\")\n",
         "\n",
-        "# reload test loader\n",
+        "\n",
         "test_tf = transforms.Compose([\n",
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize((0.1307,), (0.3081,))\n",
@@ -1488,12 +1475,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Compute all metrics from saved checkpoints ---\n",
         "import torch, torch.nn as nn, torch.nn.functional as F, numpy as np, pandas as pd, time, copy, os\n",
         "\n",
         "DEVICE = torch.device(\"cpu\")\n",
         "\n",
-        "# --- Utils ---\n",
         "@torch.no_grad()\n",
         "def eval_acc(model, loader):\n",
         "    model.eval()\n",
@@ -1522,18 +1507,15 @@
         "    return 100.0 * nz / max(total, 1)\n",
         "\n",
         "def median_latency_ms_per_sample(model, repeats=300):\n",
-        "    # safe single-thread setting\n",
         "    try:\n",
         "        torch.set_num_threads(1)\n",
         "        torch.set_num_interop_threads(1)\n",
         "    except Exception as e:\n",
-        "        # Colab sometimes complains after threads started\n",
         "        print(\"(⚠️ thread config skipped:\", e, \")\")\n",
         "    model = copy.deepcopy(model).to(\"cpu\").eval()\n",
         "    x = torch.randn(1, 1, 28, 28)\n",
         "    times = []\n",
         "    with torch.no_grad():\n",
-        "        # warm-up\n",
         "        for _ in range(50):\n",
         "            _ = model(x)\n",
         "        for _ in range(repeats):\n",
@@ -1557,7 +1539,6 @@
         "            ece += (mask.float().mean()) * torch.abs(acc - avg_conf)\n",
         "    return ece.item()\n",
         "\n",
-        "# --- Architectures ---\n",
         "class ConvBlock(nn.Module):\n",
         "    def __init__(self, cin, cout):\n",
         "        super().__init__()\n",
@@ -1577,17 +1558,17 @@
         "            ConvBlock(32, 32),\n",
         "        )\n",
         "        self.block2 = nn.Sequential(\n",
-        "            nn.MaxPool2d(2),              # 14x14\n",
+        "            nn.MaxPool2d(2),\n",
         "            ConvBlock(32, 64),\n",
         "            ConvBlock(64, 64),\n",
         "        )\n",
         "        self.block3 = nn.Sequential(\n",
-        "            nn.MaxPool2d(2),              # 7x7\n",
+        "            nn.MaxPool2d(2),\n",
         "            ConvBlock(64, 128),\n",
         "            ConvBlock(128, 128),\n",
         "        )\n",
         "        self.head = nn.Sequential(\n",
-        "            nn.AdaptiveAvgPool2d(1),      # 1x1\n",
+        "            nn.AdaptiveAvgPool2d(1),\n",
         "            nn.Flatten(),\n",
         "            nn.Linear(128, num_classes)\n",
         "        )\n",
@@ -1612,13 +1593,11 @@
         "        if x.ndim == 4: x = x.view(x.size(0), -1)\n",
         "        return self.net(x)\n",
         "\n",
-        "# --- Load data ---\n",
         "from torchvision import datasets, transforms\n",
         "test_tf = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))])\n",
         "test_ds = datasets.MNIST(root=\"./data\", train=False, download=True, transform=test_tf)\n",
         "test_loader = torch.utils.data.DataLoader(test_ds, batch_size=512, shuffle=False)\n",
         "\n",
-        "# --- Load models ---\n",
         "models = {}\n",
         "\n",
         "t_ckpt = torch.load(\"teacher_ckpt/mnist_teacher_cnn.pt\", map_location=\"cpu\")\n",
@@ -1627,19 +1606,15 @@
         "teacher.eval()\n",
         "models[\"TeacherCNN\"] = teacher\n",
         "\n",
-        "# Student (KD)\n",
         "s_ckpt = torch.load(\"/content/student_kd.pt\", map_location=\"cpu\")\n",
         "student_kd = StudentMLP(); student_kd.load_state_dict(s_ckpt if \"state_dict\" not in s_ckpt else s_ckpt[\"state_dict\"]); student_kd.eval()\n",
         "models[\"Student_KD\"] = student_kd\n",
         "\n",
-        "# Pruned (90%)\n",
         "p_ckpt = torch.load(\"compressed_ckpt/student_pruned_unstructured_90.pt\", map_location=\"cpu\")\n",
         "student_pruned = StudentMLP(); student_pruned.load_state_dict(p_ckpt if \"state_dict\" not in p_ckpt else p_ckpt[\"state_dict\"], strict=False); student_pruned.eval()\n",
         "models[\"Pruned_90\"] = student_pruned\n",
         "\n",
-        "# Quantized (INT8)\n",
         "q_ckpt = torch.load(\"compressed_ckpt/student_pruned_int8.pt\", map_location=\"cpu\")\n",
-        "# For quantized model, reload via quantize_dynamic wrapper (state_dict differs)\n",
         "from torch.ao.quantization import quantize_dynamic\n",
         "student_q = StudentMLP()\n",
         "student_qint8 = quantize_dynamic(copy.deepcopy(student_q), {nn.Linear}, dtype=torch.qint8)\n",
@@ -1649,7 +1624,6 @@
         "    print(\"⚠️ Quantized model state_dict format differs, using pre-saved quantized version directly.\")\n",
         "models[\"Quantized_INT8\"] = student_qint8\n",
         "\n",
-        "# --- Evaluate all ---\n",
         "results = []\n",
         "\n",
         "for name, model in models.items():\n",
@@ -1771,7 +1745,6 @@
       "source": [
         "@torch.no_grad()\n",
         "def temperature_scaling(logits, labels):\n",
-        "    \"\"\"Find optimal T minimizing NLL on validation set.\"\"\"\n",
         "    T = torch.ones(1, requires_grad=True)\n",
         "    optimizer = torch.optim.LBFGS([T], lr=0.01, max_iter=50)\n",
         "\n",
@@ -1786,7 +1759,6 @@
         "    optimizer.step(eval_loss)\n",
         "    return T.detach().item()\n",
         "\n",
-        "# Example: calibrate the pruned int8 student\n",
         "model = models[\"Quantized_INT8\"]\n",
         "logits, labels = [], []\n",
         "for x, y in test_loader:\n",
