--- a/DL_project_1.ipynb
+++ b/DL_project_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyONpKEUifRFMHIKmYiuLo/x",
+      "authorship_tag": "ABX9TyN9YvClHek7WV0LKZnj7HBR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,6 @@
       "cell_type": "code",
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "\n",
         "\n",
         "BATCH_SIZE = 64\n",
         "transform = transforms.Compose([\n",
@@ -303,7 +302,7 @@
         "            nn.Conv2d(64, 128, 4, 2, 1),   nn.BatchNorm2d(128), nn.LeakyReLU(0.2, True),\n",
         "            nn.Conv2d(128, 1, 7, 1, 0),    nn.Sigmoid()\n",
         "        )\n",
-        "    def forward(self, x): return self.net(x).view(-1, 1).squeeze(1)\n"
+        "    def forward(self, x): return self.net(x).view(-1, 1).squeeze(1)"
       ],
       "metadata": {
         "id": "EL2Syjz7YswF"
@@ -727,7 +726,6 @@
         "            if count >= 10000:\n",
         "                break\n",
         "\n",
-        "# --- 4. Compute FID ---\n",
         "!python -m pytorch_fid real /content/fid_vae --batch-size 256\n"
       ],
       "metadata": {
@@ -900,18 +898,14 @@
         "Z_pca = pca.fit_transform(latents)\n",
         "print(\"Explained variance ratio:\", pca.explained_variance_ratio_)\n",
         "\n",
-        "#One PCA direction\n",
         "pc_index = 0\n",
         "direction = torch.tensor(pca.components_[pc_index], dtype=torch.float32, device=device)\n",
         "\n",
-        "#Latent mean to start\n",
         "z0 = torch.tensor(latents[0], dtype=torch.float32, device=device)\n",
         "\n",
-        "#Interpolate along the principal direction\n",
         "alphas = torch.linspace(-3, 3, 11, device=device)\n",
         "z_perturbed = torch.stack([z0 + a * direction for a in alphas])\n",
         "\n",
-        "#Visualize ---\n",
         "with torch.no_grad():\n",
         "    imgs = vae.decode(z_perturbed)\n",
         "grid = utils.make_grid(imgs, nrow=11, normalize=True, value_range=(-1,1))\n",
@@ -1089,8 +1083,7 @@
         "    samples = G(z).flatten(1)  # flatten to vectors\n",
         "    dists = torch.cdist(samples, samples, p=2)  # Euclidean distances\n",
         "mean_dist = dists.mean().item()\n",
-        "print(\"GAN Mean pairwise distance:\", mean_dist)\n",
-        "\n"
+        "print(\"GAN Mean pairwise distance:\", mean_dist)"
       ],
       "metadata": {
         "colab": {
@@ -1115,14 +1108,12 @@
       "cell_type": "code",
       "source": [
         "with torch.no_grad():\n",
-        "    z = torch.randn(1000, 64, device=device)   # z_dim=64 for your VAE\n",
+        "    z = torch.randn(1000, 64, device=device)\n",
         "    fake_batch = vae.decode(z)\n",
         "\n",
-        "# --- Get some real images for comparison ---\n",
         "real_batch, _ = next(iter(test_loader))\n",
         "real_batch = real_batch[:1000].to(device)\n",
         "\n",
-        "# --- Flatten both to vectors ---\n",
         "real_flat = real_batch.flatten(1)\n",
         "fake_flat = fake_batch.flatten(1)\n",
         "\n",
