--- a/DL_project_1.ipynb
+++ b/DL_project_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN9YvClHek7WV0LKZnj7HBR",
+      "authorship_tag": "ABX9TyPybtvnNHKwwozF4zM+GDOb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -718,7 +718,7 @@
         "vae.eval()\n",
         "with torch.no_grad():\n",
         "    while count < 10000:\n",
-        "        z = torch.randn(64, 64, device=device)   # z_dim=64 for your VAE\n",
+        "        z = torch.randn(64, 64, device=device)\n",
         "        samples = vae.decode(z)\n",
         "        for img in samples:\n",
         "            save_image((img * 0.5 + 0.5).clamp(0, 1), f\"/content/fid_vae/{count:05d}.png\")\n",
@@ -1080,8 +1080,8 @@
         "\n",
         "with torch.no_grad():\n",
         "    z = torch.randn(1000, 100, 1, 1, device=device)\n",
-        "    samples = G(z).flatten(1)  # flatten to vectors\n",
-        "    dists = torch.cdist(samples, samples, p=2)  # Euclidean distances\n",
+        "    samples = G(z).flatten(1)\n",
+        "    dists = torch.cdist(samples, samples, p=2)\n",
         "mean_dist = dists.mean().item()\n",
         "print(\"GAN Mean pairwise distance:\", mean_dist)"
       ],
